--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,12 @@ body {
         resize: none;
     }
 
+@keyframes marquee {
+    from    { transform: translate(0%); } 
+    100%,to { transform: translate(-200%); }
+}
+
+  
 .select {
     width: 225px;
     height: 40px;
